syntax = "proto3";

package user.v1;

option go_package = "api/user/v1;userv1";

import "buf/validate/validate.proto";
import "user/v1/models/user.proto";

message GetUserRequest {
  string id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).uint64.gte = 1
  ];
}

message GetUserResponse {
  User user = 1;
}