syntax = "proto3";

package user.v1;

option go_package = "api/user/v1;userv1";

import "user/v1/rpc/user/create_user.proto";
import "user/v1/rpc/user/delete_user.proto";
import "user/v1/rpc/user/get_user.proto";
import "user/v1/rpc/user/get_users.proto";
import "user/v1/rpc/user/update_user.proto";


service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
